--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
 </body>
 
 </html>
+
+origin https://github.com/shebyclassic2018/test.git (fetch) origin ssh://thegiant@thegiant.co.tz/home1/thegiant/public_html/test (push) origin ssh://thegiant@thegiant.co.tz:21/home1/thegiant/public_html/test (push)
