--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             height: auto;
-            width: 450px;
+            width: 100%;
             background-color: #222222;
         }
         
